fix visibility

--- a/public/sass/style.scss
+++ b/public/sass/style.scss
@@ -161,6 +161,7 @@ body {
         padding-top: 0;
         padding-bottom: 0;
         opacity: 0;
+        visibility: hidden;
     }
 
     position: fixed;
